refactor: fix bugs and redo authentication